# assay

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.hosted  README.md  compose.hosted.yaml  compose.yaml
apps/assay-api/: Cargo.toml
apps/assay-api/src/: error.rs  handlers.rs  main.rs  routes.rs  seeding.rs  state.rs
apps/assay-worker/: Cargo.toml
apps/assay-worker/src/: main.rs
crates/assay-ai-evaluator/: Cargo.toml  README.md
crates/assay-ai-evaluator/src/: agentic.rs  api.rs  bundle.rs  error.rs  evaluator.rs  lib.rs  ollama.rs  openai.rs  rubric.rs
crates/assay-ai-evaluator/src/adapter/: mod.rs  statement.rs
crates/assay-ai-evaluator/src/agentic/: config.rs  evaluator.rs  instructions.rs  mod.rs  provenance.rs  runner.rs  workspace.rs
crates/assay-ai-evaluator/src/api/: evaluator.rs  mod.rs  profile.rs  provenance.rs  secret.rs  transport.rs
crates/assay-ai-evaluator/src/bundle/: descriptor.rs  hash.rs  kind.rs  mod.rs  scope.rs  text.rs
crates/assay-ai-evaluator/src/evaluator/: boundary.rs  judgment.rs  mod.rs  provider.rs  raw.rs  request.rs  types.rs  validate.rs
crates/assay-ai-evaluator/src/ollama/: config.rs  disposition.rs  envelope.rs  evaluator.rs  metadata.rs  mod.rs  transport.rs  workflow.rs
crates/assay-ai-evaluator/tests/: agentic_adapter.rs  agentic_adapter_failures.rs  agentic_adapter_success.rs  evaluator_contract.rs  evaluator_contract_canonical.rs  evaluator_contract_injection.rs  evaluator_contract_privacy.rs  evaluator_contract_rejections.rs  manifest_adapter.rs  ollama_adapter.rs  openai_adapter.rs  openai_adapter_failures.rs  openai_adapter_success.rs
crates/assay-ai-evaluator/tests/agentic_adapter_helpers/: mod.rs
crates/assay-ai-evaluator/tests/evaluator_contract_helpers/: mod.rs
crates/assay-ai-evaluator/tests/openai_adapter_helpers/: mod.rs
crates/assay-cli/: Cargo.toml  README.md
crates/assay-cli/src/: cli.rs  errors.rs  evaluators.rs  git.rs  lib.rs  main.rs  output.rs  schema.rs  tests.rs  time.rs
crates/assay-cli/src/commands/: analyze.rs  capabilities.rs  evaluation.rs  history.rs  mod.rs  serve.rs
crates/assay-cli/src/evaluators/: mod.rs  runner.rs  secret.rs  tests.rs  workspace.rs
crates/assay-cli/tests/: agentic_deployment.rs  ci_hygiene_paths.rs  ci_hygiene_staged.rs  ci_hygiene_workflow.rs  cli_contract.rs  cli_contract_analyze.rs  cli_contract_capabilities.rs  cli_contract_common.rs  cli_contract_limits.rs  cli_contract_unix.rs  cross_component_cli.rs  cross_component_evaluator.rs  cross_component_integration.rs  cross_component_serve_history.rs  foundation_ci_hygiene.rs  foundation_vertical_citations.rs  foundation_vertical_slice.rs  local_dashboard.rs  schema_boundary_contracts.rs  schema_bundle_invariants.rs  schema_contracts.rs  schema_evaluation_contracts.rs  schema_evidence_contracts.rs  schema_evidence_partial.rs  schema_golden_validation.rs  schema_versioning.rs
crates/assay-cli/tests/ci_hygiene/: audit.rs  common.rs  mod.rs  yaml.rs
crates/assay-cli/tests/cross_component/: common.rs  fixtures.rs  mod.rs  serve.rs
crates/assay-cli/tests/foundation_vertical/: common.rs  fixture.rs  mod.rs  runner.rs  validation.rs
crates/assay-cli/tests/schema_contracts_helpers/: assertions.rs  common.rs  fixtures.rs  mod.rs
crates/assay-git/: Cargo.toml  README.md
crates/assay-git/src/: cli.rs  lib.rs  model.rs  process.rs  topology.rs
crates/assay-git/src/cli/: adapter.rs  error.rs  identity.rs  mod.rs  object_store.rs  port.rs
crates/assay-git/src/model/: entry.rs  error.rs  history.rs  limits.rs  mod.rs  object_id.rs  path.rs  provenance.rs  snapshot.rs
crates/assay-git/tests/: fixture_support.rs  sa_history_limits.rs  sa_identity.rs  sa_immutable.rs  sa_missing_git.rs  sa_repository_shapes.rs  sb_hostile_env.rs  sb_object_store.rs  sb_process.rs  sb_raw_diff.rs  sb_redirects.rs  sb_version.rs  security_boundaries.rs  snapshot_adapter.rs
crates/assay-git/tests/security_boundaries_helpers/: mod.rs
crates/assay-git/tests/snapshot_adapter_helpers/: mod.rs
crates/assay-github/: Cargo.toml
crates/assay-github/src/: cache.rs  collection.rs  hosted.rs  http.rs  lib.rs  source.rs  tree.rs
crates/assay-github/src/cache/: blob.rs  digest.rs  error.rs  evaluation.rs  mod.rs  version.rs
crates/assay-github/src/collection/: collector.rs  error.rs  mod.rs  reader.rs  source.rs
crates/assay-github/src/tree/: contract.rs  handler.rs  limits.rs  mod.rs  path.rs  visitor.rs
crates/assay-github/tests/: collection.rs  hosted_adapter.rs  source_and_cache.rs
crates/assay-github/tests/collection_helpers/: mod.rs  revision.rs  revision_edge.rs  tree.rs
crates/assay-project-intelligence/: Cargo.toml  README.md
crates/assay-project-intelligence/src/: ai_analysis.rs  classification.rs  comparison.rs  contract.rs  evidence.rs  feature.rs  hosted.rs  hosted_workflow.rs  lib.rs  machine.rs  run.rs  scoring.rs
crates/assay-project-intelligence/src/classification/: applicability.rs  classify.rs  error.rs  mod.rs  (+5 more)
crates/assay-project-intelligence/tests/: classification.rs  comparison.rs  evidence_manifest.rs  evidence_manifest_assembly.rs  evidence_manifest_edge.rs  evidence_manifest_features.rs  evidence_manifest_policy.rs  hosted_contract.rs  hosted_workflow.rs  machine_contract.rs  machine_contract_references.rs  machine_contract_semantics.rs  project_ai_analysis_contract.rs  run_state.rs  run_state_lifecycle.rs  run_state_machine_value.rs  score_compiler.rs  score_compiler_rubric.rs  score_compiler_scores.rs
crates/assay-semantic-diff/: Cargo.toml
crates/assay-semantic-diff/examples/: semantic_diff_spike.rs
crates/assay-semantic-diff/src/: engine.rs  lib.rs  types.rs  units.rs
crates/assay-semantic-diff/tests/: reviewed_fixture_contract.rs
crates/assay-storage/: Cargo.toml
crates/assay-storage/src/: admission.rs  admission_bucket.rs  ai_analysis.rs  approval.rs  error.rs  evaluation.rs  failure.rs  failure_circuit.rs  job.rs  lib.rs  rows.rs  source.rs  status.rs  storage.rs  tests.rs  types.rs  util.rs  workflow.rs
(+432 files in other folders)
