[workspace]
members = [
    "crates/assay-ai-evaluator",
    "crates/assay-classifier",
    "crates/assay-cli",
    "crates/assay-domain",
    "crates/assay-git",
    "crates/assay-github",
    "crates/assay-project-intelligence",
    "tests/support/assay-fixtures",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
publish = false
