[package]
name = "assay-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
assay-ai-evaluator = { path = "../../crates/assay-ai-evaluator" }
assay-github = { path = "../../crates/assay-github" }
assay-project-intelligence = { path = "../../crates/assay-project-intelligence" }
assay-storage = { path = "../../crates/assay-storage" }
tokio.workspace = true
