[package]
name = "assay-ai-evaluator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
assay-domain = { path = "../assay-domain" }
assay-project-intelligence = { path = "../assay-project-intelligence" }
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
assay-classifier = { path = "../assay-classifier" }
assay-git = { path = "../assay-git" }
assay-test-fixtures = { path = "../../tests/support/assay-fixtures" }
jsonschema.workspace = true
serde_json.workspace = true
