[package]
name = "assay-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
assay-project-intelligence = { path = "../assay-project-intelligence" }

[dev-dependencies]
jsonschema = { version = "0.33", default-features = false }
serde = "1.0"
serde_json = "1.0"
