[package]
name = "assay-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "assay"
path = "src/main.rs"

[dependencies]
assay-classifier = { path = "../assay-classifier" }
assay-git = { path = "../assay-git" }
assay-local = { path = "../assay-local" }
assay-project-intelligence = { path = "../assay-project-intelligence" }
clap = { version = "4.5", features = ["derive"] }
jsonschema = { version = "0.33", default-features = false }
serde_json = "1.0"
tempfile = "3.20"
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
jsonschema = { version = "0.33", default-features = false }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
assay-test-fixtures = { path = "../../tests/support/assay-fixtures" }
