[package]
name = "assay-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "assay"
path = "src/main.rs"

[dependencies]
assay-ai-evaluator = { path = "../assay-ai-evaluator" }
assay-classifier = { path = "../assay-classifier" }
assay-domain = { path = "../assay-domain" }
assay-git = { path = "../assay-git" }
assay-local = { path = "../assay-local" }
assay-project-intelligence = { path = "../assay-project-intelligence" }
clap.workspace = true
jsonschema.workspace = true
serde_json.workspace = true
tempfile.workspace = true
time.workspace = true

[dev-dependencies]
hex.workspace = true
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
assay-test-fixtures = { path = "../../tests/support/assay-fixtures" }
