[package]
name = "assay-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
assay-domain = { path = "../assay-domain" }
command-group = "5.0.1"
sha2 = "0.10"

[dev-dependencies]
assay-test-fixtures = { path = "../../tests/support/assay-fixtures" }
tempfile = "3.20"
