[package]
name = "assay-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
assay-domain = { path = "../assay-domain" }
command-group.workspace = true
hex.workspace = true
sha2.workspace = true
time.workspace = true

[dev-dependencies]
assay-test-fixtures = { path = "../../tests/support/assay-fixtures" }
serial_test.workspace = true
tempfile.workspace = true
