[package]
name = "assay-github"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
assay-domain = { path = "../assay-domain" }
assay-project-intelligence = { path = "../assay-project-intelligence" }
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
