[package]
name = "assay-project-intelligence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
assay-classifier = { path = "../assay-classifier" }
assay-domain = { path = "../assay-domain" }
assay-git = { path = "../assay-git" }
sha2 = "0.10"
serde_json = "1.0"

[dev-dependencies]
assay-test-fixtures = { path = "../../tests/support/assay-fixtures" }
tempfile = "3.20"
