[package]
name = "assay-project-intelligence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
assay-classifier = { path = "../assay-classifier" }
assay-domain = { path = "../assay-domain" }
assay-git = { path = "../assay-git" }
hex.workspace = true
serde.workspace = true
sha2.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
assay-test-fixtures = { path = "../../tests/support/assay-fixtures" }
jsonschema.workspace = true
tempfile.workspace = true
tokio.workspace = true
